2003-03-11  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_wait.S
	(__condvar_cleanup): Wake up all waiters in case we got signaled
	after being woken up but before disabling asynchronous
	cancellation.
	* sysdeps/pthread/pthread_cond_wait.c (__condvar_cleanup): Likewise.
	* sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S
	(__condvar_cleanup): Likewise.

	* init.c (__NR_set_tid_address): If already defined, don't redefine.
	Make it an error if architecture has no #if case.  Add x86-64.

	* sysdeps/unix/sysv/linux/x86_64/Makefile: Add flags for
	pt-initfini.s generation.

	* sysdeps/x86_64/tls.h: Include <asm/prctl.h>.
	(TLS_INIT_TP): Fix typo.

2003-03-11  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/ia64/bits/atomic.h (atomic_exchange_and_add): Swap 2nd and
	3rd argument of __arch_compare_and_exchange_{32,64}_val_acq.

	* sysdeps/unix/sysv/linux/ia64/sem_post.c: Include semaphore.h.
	* sysdeps/unix/sysv/linux/ia64/sem_timedwait.c: Likewise.
	* sysdeps/unix/sysv/linux/ia64/sem_trywait.c: Likewise.
	* sysdeps/unix/sysv/linux/ia64/sem_wait.c: Likewise.
	* sysdeps/unix/sysv/linux/s390/sem_post.c: Likewise.
	* sysdeps/unix/sysv/linux/s390/sem_timedwait.c: Likewise.
	* sysdeps/unix/sysv/linux/s390/sem_trywait.c: Likewise.
	* sysdeps/unix/sysv/linux/s390/sem_wait.c: Likewise.

2003-03-11  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/pthread/pthread_cond_timedwait.c
	(__pthread_cond_timedwait): Return the result of the final
	locking.  If it succeeds, the regular function return value.

	* sysdeps/pthread/pthread_cond_wait.c (__pthread_cond_wait):
	Return result of the final locking.
	* version.c (__nptl_main): Work around problems with the strange
	INTERNAL_SYSCALL macro on ppc32.
	* init.c (__pthread_initialize_minimal_internal): Unblock
	SIGCANCEL in case the parent blocked it.
	Reported by Paul Mackerras <paulus@samba.org>.

	* sysdeps/unix/sysv/linux/x86_64/pthread_cond_broadcast.S: New file.